--- a/README
+++ b/README
@@ -57,19 +57,26 @@ mvn install package
     wget ftp://ftp.ncbi.nlm.nih.gov/blast/executables/blast+/LATEST/ncbi-blast-2.6.0+-x64-linux.tar.gz
     Extract and make
 
-### Download and extract wanted BLAST and HMMER databases under the same path on every worker node
+### Download and extract BLAST and HMMER databases under the same path on every worker node
 eg. vFam database for hmmsearch
     wget http://derisilab.ucsf.edu/software/vFam/vFam-B_2014.hmm
 eg. BLAST nt and human database files
-    for i in {0..9}; do wget ftp://ftp.ncbi.nlm.nih.gov/blast/db/env_nt.0$i.tar.gz ; done
-    for i in {10..23}; do wget ftp://ftp.ncbi.nlm.nih.gov/blast/db/env_nt.$i.tar.gz ; done
-    wget ftp://ftp.ncbi.nlm.nih.gov/blast/db/est_human.00.tar.gz
-    wget ftp://ftp.ncbi.nlm.nih.gov/blast/db/est_human.01.tar.gz
+    for i in {0..9}; do wget ftp://ftp.ncbi.nlm.nih.gov/blast/db/nt.0$i.tar.gz ; done
+    for i in {10..50}; do wget ftp://ftp.ncbi.nlm.nih.gov/blast/db/nt.$i.tar.gz ; done
+    for i in {0..9}; do wget ftp://ftp.ncbi.nlm.nih.gov/blast/db/human_genomic.0$i.tar.gz ; done
+    for i in {10..22}; do wget ftp://ftp.ncbi.nlm.nih.gov/blast/db/human_genomic.$i.tar.gz ; done
+    wget ftp://ftp.ncbi.nlm.nih.gov/blast/db/taxdb.tar.gz
     cat *.gz | tar -xzvf - -i
 Copy DBs to every node with scp
     scp vFam-B_2014.hmm username@hostname:/database/hmmer
-    scp *.n* username@hostname:/database/blast
+    scp nt.* username@hostname:/database/blast/nt
+    scp human_genomic.* username@hostname:/database/blast/hg
+    scp taxdb.* username@hostname:/database/taxdb
 
+Set BLASTDB environment variable on each node:
+    export BLASTDB=$BLASTDB:/database/blast/nt
+    export BLASTDB=$BLASTDB:/database/blast/hg
+    export BLASTDB=$BLASTDB:/database/taxdb
 ------------------------------------------------------------------------------------------
 Running the example pipeline
 ------------------------------------------------------------------------------------------
@@ -86,7 +93,5 @@ Running the example pipeline
     hdfs dfs -put ERR016234_2.filt.fastq.gz /data/input/example
 
 ###Run the pipeline
-Check that memory allocations fit your system and that directories, databases etc. exists and user has proper permissions.
-    ./pipeline_cluster.sh /data/input /data/output example
-    or
-    ./pipeline_local.sh /data/input /data/output example
+Check that configuration of Spark master, num-executors, executor-memory etc. fit your system and that classpath, directories, databases etc. exists and user has proper permissions.
+    scripts/virapipe.sh /data/input /data/output example
